These are the release notes for the Diff extension.

Extension page on mediawiki.org: https://www.mediawiki.org/wiki/Extension:Diff
Latest version of the release notes: https://gerrit.wikimedia.org/r/gitweb?p=mediawiki/extensions/Diff.git;a=blob;f=RELEASE-NOTES


=== Version 0.5 ===
(dev)

; Removals

* Removed Diff::getApplicableDiff

=== Version 0.4 ===
2013-01-08

; Additions

* Split off diffing code from MapDiff and ListDiff to dedicated Differ classes
* Added dedicated Patcher classes, which are used for the getApplicableDiff functionality

; Deprecations

* Deprecated ListDiff:newFromArrays and MapDiff::newFromArrays
* Deprecated ListDiff::newEmpty and MapDiff::newEmpty
* Deprecated Diff::getApplicableDiff
* Soft deprecated DiffOp interface in favour of DiffOp
* Soft deprecated IDiff interface in favour of Diff
* Soft deprecated MapDiff and ListDiff in favour of Diff

; Removals

* Removed parentKey functionality from Diff
* Removed constructor from Diff interface
* Removed Diff::newEmpty

=== Version 0.3 ===
2012-11-21

* Improved entry point and setup code. Diff.php is now the main entry point for both MW extension and standalone library
* ListDiffs with only add operations can now be applied on top of bases that do not have their key
* Added Diff::removeEmptyOperations
* Improved type hinting
* Improved test coverage
** Added constructor tests for MapDiff and ListDiff
** Added extra tests for Diff and MapDiff
** Test coverage is now 100%
* Removed static method from Diff interface

=== Version 0.2 ===
2012-11-01

* Fixed tests to work with PHP 5.4 and above
* Added translations
* Added some profiling calls

=== Version 0.1 ===
2012-9-25

Initial release with these features:

* Classes to represent diffs or collections of diff operations: Diff, MapDiff, ListDiff
* Classes to represent diff operations: Diff, MapDiff, ListDiff, DiffOpAdd, DiffOpChange, DiffOpRemove
* Methods to compute list and maps diffs
* Support for recursive diffs of arbitrary depth